@@ -4,3 +4,4 @@ install(FILES btjunkie/opensearch.xml DESTINATION ${DATA_INSTALL_DIR}/ktorrent/o
 install(FILES ktorrents/opensearch.xml DESTINATION ${DATA_INSTALL_DIR}/ktorrent/opensearch/ktorrents )
 install(FILES mininova/opensearch.xml DESTINATION ${DATA_INSTALL_DIR}/ktorrent/opensearch/mininova )
 install(FILES thepiratebay/opensearch.xml DESTINATION ${DATA_INSTALL_DIR}/ktorrent/opensearch/thepiratebay )
+install(FILES legittorrents/opensearch.xml DESTINATION ${DATA_INSTALL_DIR}/ktorrent/opensearch/legittorrents )
